# yolovex

./: .gitignore  DEVNOTES.md  LICENSE  README.md  pyproject.toml
frontend/: README.md  app-l2.jsx  app.jsx  arch-l2.jsx  arch.jsx  data-l2.js  data.js  graph-l2.jsx  graph.jsx  heatmap.jsx  internals.jsx  layout-l2.jsx  layout.jsx  panel.jsx  spec-data.js  spec-viewer.html  spec-viewer.jsx  sppf-test.html  yolovex-l2.html  yolovex.html
frontend/v2/: README.md  app-v2.jsx  arch-v2.jsx  expand-v2.jsx  graph-v2.jsx  layout-v2.jsx  yolovex-design-spec.html  yolovexv2.html
scripts/: integration_test.sh
src/yolovex/: SPEC_VIEWER.md  __init__.py  activations.py  block_spec.py  build_assets.py  build_assets_l2.py  build_assets_v2.py  cli.py  graph.py  head.py  introspect.py  layers.py  model.py  report.py  topology.py  trace.py  viz.py
